// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CardTile default 1`] = `
<div
  className="card card__profile--pad"
>
  <div
    className="card-image"
  >
    <figure
      className="image is-16by9"
    >
      <img
        alt=""
        src="http://placekitten.com/1080/540"
      />
    </figure>
  </div>
  <div
    className="card-content"
  >
    <div
      className="media"
    >
      <div
        className="media-content"
      >
        <p
          className="title is-6"
        >
          Sweetwater
           
          <span
            className="asteriks"
          >
             * 
          </span>
        </p>
      </div>
    </div>
    <div
      className="content"
    >
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      </p>
      <br />
    </div>
  </div>
  <footer
    className="card-footer"
  >
    <a
      className="card-footer-item"
      href="/badestellen/1"
      onClick={[Function]}
    >
      Detail
    </a>
  </footer>
</div>
`;

exports[`Storyshots SpotEditor default 1`] = `
<form
  action="#"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="buttons  buttons__spot-actions--size"
  >
    <button
      className="button is-primary is-small"
      type="submit"
    >
      <span
        className="icon is-small"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-save fa-w-14 "
          data-icon="save"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M433.941 129.941l-83.882-83.882A48 48 0 0 0 316.118 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V163.882a48 48 0 0 0-14.059-33.941zM224 416c-35.346 0-64-28.654-64-64 0-35.346 28.654-64 64-64s64 28.654 64 64c0 35.346-28.654 64-64 64zm96-304.52V212c0 6.627-5.373 12-12 12H76c-6.627 0-12-5.373-12-12V108c0-6.627 5.373-12 12-12h228.52c3.183 0 6.235 1.264 8.485 3.515l3.48 3.48A11.996 11.996 0 0 1 320 111.48z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
      <span>
        Speichern
      </span>
       
    </button>
    <button
      className="button is-small"
      data-testid="handle-edit-mode-button"
      onClick={[Function]}
      type="button"
    >
      <span
        className="icon is-small"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-window-close fa-w-16 "
          data-icon="window-close"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M464 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-83.6 290.5c4.8 4.8 4.8 12.6 0 17.4l-40.5 40.5c-4.8 4.8-12.6 4.8-17.4 0L256 313.3l-66.5 67.1c-4.8 4.8-12.6 4.8-17.4 0l-40.5-40.5c-4.8-4.8-4.8-12.6 0-17.4l67.1-66.5-67.1-66.5c-4.8-4.8-4.8-12.6 0-17.4l40.5-40.5c4.8-4.8 12.6-4.8 17.4 0l66.5 67.1 66.5-67.1c4.8-4.8 12.6-4.8 17.4 0l40.5 40.5c4.8 4.8 4.8 12.6 0 17.4L313.3 256l67.1 66.5z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
      <span>
        Abbrechen
      </span>
       
    </button>
    <button
      className="button is-small"
      data-testid="handle-info-mode-button"
      onClick={[Function]}
      type="button"
    >
      <span
        className="icon is-small"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-info fa-w-6 "
          data-icon="info"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 192 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
      <span>
        Info
      </span>
       
    </button>
  </div>
  <div
    className=""
    style={
      Object {
        "paddingTop": "2rem",
      }
    }
  >
    <fieldset>
      <legend
        className="title is-5"
      >
        Basis Daten*
      </legend>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <label
            className="label"
            htmlFor="name"
          >
            Name
          </label>
        </div>
        <div
          className="field-body"
        >
          <div
            className="field "
          >
            <div
              className="control "
            >
              <input
                className="input is-small"
                data-testid="test-input-name"
                id="name"
                name="name"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="foo"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <div
            className="label"
          />
        </div>
        <div
          className="field-body"
        >
          <div
            className="field"
          >
            <div
              className="control"
            >
              <label
                className="checkbox"
                htmlFor="cyanoPossible"
              >
                <input
                  id="cyanoPossible"
                  name="cyanoPossible"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="checkbox"
                />
                <span
                  className="form__checkbox--distance"
                >
                  Cyanobakterien möglich
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
  <div
    className=""
    style={
      Object {
        "paddingTop": "2rem",
      }
    }
  >
    <fieldset>
      <legend
        className="title is-5"
      >
        Geo Daten *
      </legend>
      <div
        className="buttons"
      >
        <div
          className="dropdown  is-small"
        >
          <div
            aria-controls="dropdown-menu"
            aria-haspopup="true"
            className="dropdown-trigger"
          >
            <button
              aria-controls="dropdown-menu"
              aria-haspopup="true"
              className="button is-small"
              onClick={[Function]}
            >
              <span
                style={
                  Object {
                    "paddingRight": "0.5em",
                  }
                }
              >
                Bearbeitungs Modus:  Anzeige
              </span>
              <span>
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-angle-down fa-w-10 "
                  data-icon="angle-down"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            className="dropdown-menu"
            id="dropdown-menu"
            role="menu"
          >
            <div
              className="dropdown-content"
            >
              <a
                className="dropdown-item is-active"
                href="#/"
                id="view"
                onClick={[Function]}
              >
                anzeigen
              </a>
              <a
                className="dropdown-item  "
                href="#/"
                id="modify"
                onClick={[Function]}
              >
                modifizieren
              </a>
              <a
                className="dropdown-item  "
                href="#/"
                id="translate"
                onClick={[Function]}
              >
                bewegen
              </a>
              <a
                className="dropdown-item "
                href="#/"
                id="drawPoint"
                onClick={[Function]}
              >
                Punkt zeichnen
              </a>
              <a
                className="dropdown-item "
                href="#/"
                id="drawPolygon"
                onClick={[Function]}
              >
                Polygon zeichnen
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        id="map__container"
      >
        <div
          id="deckgl-wrapper"
        >
          <canvas
            id="deckgl-overlay"
            style={
              Object {
                "left": 0,
                "position": "absolute",
                "top": 0,
              }
            }
          />
        </div>
      </div>
    </fieldset>
  </div>
  <div
    className=""
    style={
      Object {
        "paddingTop": "2rem",
      }
    }
  >
    <fieldset>
      <legend
        className="title is-5"
      >
        Hygienische Beeinträchtigung durch:
      </legend>
      <div
        className="field"
      >
        <label
          className="label"
          htmlFor="influencePurificationPlant"
        >
          kommunale Klärwerke
        </label>
        <div
          className="control"
        >
          <div
            className="select is-small"
          >
            <select
              id="influencePurificationPlant"
              name="influencePurificationPlant"
              onBlur={[Function]}
              onChange={[Function]}
            >
              <option
                value="yes"
              >
                Ja
              </option>
              <option
                value="unknown"
              >
                Unbekannt
              </option>
              <option
                value="no"
              >
                Nein
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          className="label"
          htmlFor="influenceCombinedSewerSystem"
        >
          Mischwassereinleitungen aus urbanen Gebieten
        </label>
        <div
          className="control"
        >
          <div
            className="select is-small"
          >
            <select
              id="influenceCombinedSewerSystem"
              name="influenceCombinedSewerSystem"
              onBlur={[Function]}
              onChange={[Function]}
            >
              <option
                value="yes"
              >
                Ja
              </option>
              <option
                value="unknown"
              >
                Unbekannt
              </option>
              <option
                value="no"
              >
                Nein
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          className="label"
          htmlFor="influenceRainwater"
        >
          Regenwassereileitung aus urbanen Gebieten
        </label>
        <div
          className="control"
        >
          <div
            className="select is-small"
          >
            <select
              id="influenceRainwater"
              name="influenceRainwater"
              onBlur={[Function]}
              onChange={[Function]}
            >
              <option
                value="yes"
              >
                Ja
              </option>
              <option
                value="unknown"
              >
                Unbekannt
              </option>
              <option
                value="no"
              >
                Nein
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          className="label"
          htmlFor="influenceAgriculture"
        >
          Einleitungen aus der Landwirtschaft
        </label>
        <div
          className="control"
        >
          <div
            className="select is-small"
          >
            <select
              id="influenceAgriculture"
              name="influenceAgriculture"
              onBlur={[Function]}
              onChange={[Function]}
            >
              <option
                value="yes"
              >
                Ja
              </option>
              <option
                value="unknown"
              >
                Unbekannt
              </option>
              <option
                value="no"
              >
                Nein
              </option>
            </select>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
  <div
    className=""
    style={
      Object {
        "paddingTop": "2rem",
      }
    }
  >
    <fieldset>
      <legend
        className="title is-5"
      >
        Zusatz Daten
      </legend>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <div
            className="label"
          />
        </div>
        <div
          className="field-body"
        >
          <div
            className="field"
          >
            <div
              className="control"
            >
              <label
                className="checkbox"
                htmlFor="isPublic"
              >
                <input
                  checked={true}
                  id="isPublic"
                  name="isPublic"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="checkbox"
                  value={true}
                />
                <span
                  className="form__checkbox--distance"
                >
                  Öffentlich einsehbar
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <label
            className="label"
            htmlFor="nameLong"
          >
            Langer Name
          </label>
        </div>
        <div
          className="field-body"
        >
          <div
            className="field "
          >
            <div
              className="control "
            >
              <input
                className="input is-small"
                data-testid="test-input-nameLong"
                id="nameLong"
                name="nameLong"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <label
            className="label"
            htmlFor="water"
          >
            Gewässer
          </label>
        </div>
        <div
          className="field-body"
        >
          <div
            className="field "
          >
            <div
              className="control "
            >
              <input
                className="input is-small"
                data-testid="test-input-water"
                id="water"
                name="water"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <label
            className="label"
            htmlFor="district"
          >
            Distrikt
          </label>
        </div>
        <div
          className="field-body"
        >
          <div
            className="field "
          >
            <div
              className="control "
            >
              <input
                className="input is-small"
                data-testid="test-input-district"
                id="district"
                name="district"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <label
            className="label"
            htmlFor="street"
          >
            Straße
          </label>
        </div>
        <div
          className="field-body"
        >
          <div
            className="field "
          >
            <div
              className="control "
            >
              <input
                className="input is-small"
                data-testid="test-input-street"
                id="street"
                name="street"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <label
            className="label"
            htmlFor="postalCode"
          >
            Postleitzahl
          </label>
        </div>
        <div
          className="field-body"
        >
          <div
            className="field "
          >
            <div
              className="control "
            >
              <input
                className="input is-small"
                data-testid="test-input-postalCode"
                id="postalCode"
                name="postalCode"
                onBlur={[Function]}
                onChange={[Function]}
                type="number"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <label
            className="label"
            htmlFor="city"
          >
            Stadt
          </label>
        </div>
        <div
          className="field-body"
        >
          <div
            className="field "
          >
            <div
              className="control "
            >
              <input
                className="input is-small"
                data-testid="test-input-city"
                id="city"
                name="city"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <label
            className="label"
            htmlFor="website"
          >
            Website URL
          </label>
        </div>
        <div
          className="field-body"
        >
          <div
            className="field "
          >
            <div
              className="control "
            >
              <input
                className="input is-small"
                data-testid="test-input-website"
                id="website"
                name="website"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <label
            className="label"
            htmlFor="lastClassification"
          >
            Letzte Klassifizierung
          </label>
        </div>
        <div
          className="field-body"
        >
          <div
            className="field "
          >
            <div
              className="control "
            >
              <input
                className="input is-small"
                data-testid="test-input-lastClassification"
                id="lastClassification"
                name="lastClassification"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <label
            className="label"
            htmlFor="image"
          >
            Bild URL
          </label>
        </div>
        <div
          className="field-body"
        >
          <div
            className="field "
          >
            <div
              className="control "
            >
              <input
                className="input is-small"
                data-testid="test-input-image"
                id="image"
                name="image"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <label
            className="label"
            htmlFor="elevation"
          >
            Höhe über NN
          </label>
        </div>
        <div
          className="field-body"
        >
          <div
            className="field "
          >
            <div
              className="control "
            >
              <input
                className="input is-small"
                data-testid="test-input-elevation"
                id="elevation"
                name="elevation"
                onBlur={[Function]}
                onChange={[Function]}
                type="number"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <label
            className="label"
            htmlFor="apiEndpoints"
          >
            API Endpoints
          </label>
        </div>
        <div
          className="field-body"
        >
          <div
            className="field "
          >
            <div
              className="control "
            >
              <input
                className="input is-small"
                data-testid="test-input-apiEndpoints"
                id="apiEndpoints"
                name="apiEndpoints"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <label
            className="label"
            htmlFor="waterRescue"
          >
            Wasserrettung
          </label>
        </div>
        <div
          className="field-body"
        >
          <div
            className="field "
          >
            <div
              className="control "
            >
              <input
                className="input is-small"
                data-testid="test-input-waterRescue"
                id="waterRescue"
                name="waterRescue"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <div
            className="label"
          />
        </div>
        <div
          className="field-body"
        >
          <div
            className="field"
          >
            <div
              className="control"
            >
              <label
                className="checkbox"
                htmlFor="waterRescueThroughDLRGorASB"
              >
                <input
                  id="waterRescueThroughDLRGorASB"
                  name="waterRescueThroughDLRGorASB"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="checkbox"
                />
                <span
                  className="form__checkbox--distance"
                >
                  Wasserrettung durch DLRG oder ASB?
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <div
            className="label"
          />
        </div>
        <div
          className="field-body"
        >
          <div
            className="field"
          >
            <div
              className="control"
            >
              <label
                className="checkbox"
                htmlFor="lifeguard"
              >
                <input
                  id="lifeguard"
                  name="lifeguard"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="checkbox"
                />
                <span
                  className="form__checkbox--distance"
                >
                  Rettungschwimmer vor Ort
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <div
            className="label"
          />
        </div>
        <div
          className="field-body"
        >
          <div
            className="field"
          >
            <div
              className="control"
            >
              <label
                className="checkbox"
                htmlFor="disabilityAccess"
              >
                <input
                  id="disabilityAccess"
                  name="disabilityAccess"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="checkbox"
                />
                <span
                  className="form__checkbox--distance"
                >
                  Barrierefreie
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <div
            className="label"
          />
        </div>
        <div
          className="field-body"
        >
          <div
            className="field"
          >
            <div
              className="control"
            >
              <label
                className="checkbox"
                htmlFor="disabilityAccessBathrooms"
              >
                <input
                  id="disabilityAccessBathrooms"
                  name="disabilityAccessBathrooms"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="checkbox"
                />
                <span
                  className="form__checkbox--distance"
                >
                  Barrierefreie Waschräume
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <div
            className="label"
          />
        </div>
        <div
          className="field-body"
        >
          <div
            className="field"
          >
            <div
              className="control"
            >
              <label
                className="checkbox"
                htmlFor="hasDisabilityAccesableEntrence"
              >
                <input
                  id="hasDisabilityAccesableEntrence"
                  name="hasDisabilityAccesableEntrence"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="checkbox"
                />
                <span
                  className="form__checkbox--distance"
                >
                  Barrierefreier Eingang
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <div
            className="label"
          />
        </div>
        <div
          className="field-body"
        >
          <div
            className="field"
          >
            <div
              className="control"
            >
              <label
                className="checkbox"
                htmlFor="restaurant"
              >
                <input
                  id="restaurant"
                  name="restaurant"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="checkbox"
                />
                <span
                  className="form__checkbox--distance"
                >
                  Restaurant
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <div
            className="label"
          />
        </div>
        <div
          className="field-body"
        >
          <div
            className="field"
          >
            <div
              className="control"
            >
              <label
                className="checkbox"
                htmlFor="snack"
              >
                <input
                  id="snack"
                  name="snack"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="checkbox"
                />
                <span
                  className="form__checkbox--distance"
                >
                  Snack
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <div
            className="label"
          />
        </div>
        <div
          className="field-body"
        >
          <div
            className="field"
          >
            <div
              className="control"
            >
              <label
                className="checkbox"
                htmlFor="parkingSpots"
              >
                <input
                  id="parkingSpots"
                  name="parkingSpots"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="checkbox"
                />
                <span
                  className="form__checkbox--distance"
                >
                  Parkplätze
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <div
            className="label"
          />
        </div>
        <div
          className="field-body"
        >
          <div
            className="field"
          >
            <div
              className="control"
            >
              <label
                className="checkbox"
                htmlFor="bathrooms"
              >
                <input
                  id="bathrooms"
                  name="bathrooms"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="checkbox"
                />
                <span
                  className="form__checkbox--distance"
                >
                  Waschräume
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <div
            className="label"
          />
        </div>
        <div
          className="field-body"
        >
          <div
            className="field"
          >
            <div
              className="control"
            >
              <label
                className="checkbox"
                htmlFor="bathroomsMobile"
              >
                <input
                  id="bathroomsMobile"
                  name="bathroomsMobile"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="checkbox"
                />
                <span
                  className="form__checkbox--distance"
                >
                  Mobile Toiletten
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <div
            className="label"
          />
        </div>
        <div
          className="field-body"
        >
          <div
            className="field"
          >
            <div
              className="control"
            >
              <label
                className="checkbox"
                htmlFor="dogban"
              >
                <input
                  id="dogban"
                  name="dogban"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="checkbox"
                />
                <span
                  className="form__checkbox--distance"
                >
                  Hundeverbot
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
  <div
    className=""
    style={
      Object {
        "paddingTop": "2rem",
      }
    }
  >
    <fieldset>
      <legend
        className="title is-5"
      >
        Zuständiges Gesundheitsamt
      </legend>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <label
            className="label"
            htmlFor="healthDepartment"
          >
            Name
          </label>
        </div>
        <div
          className="field-body"
        >
          <div
            className="field "
          >
            <div
              className="control "
            >
              <input
                className="input is-small"
                data-testid="test-input-healthDepartment"
                id="healthDepartment"
                name="healthDepartment"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <label
            className="label"
            htmlFor="healthDepartmentAddition"
          >
            Zusatz
          </label>
        </div>
        <div
          className="field-body"
        >
          <div
            className="field "
          >
            <div
              className="control "
            >
              <input
                className="input is-small"
                data-testid="test-input-healthDepartmentAddition"
                id="healthDepartmentAddition"
                name="healthDepartmentAddition"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <label
            className="label"
            htmlFor="healthDepartmentStreet"
          >
            Straße
          </label>
        </div>
        <div
          className="field-body"
        >
          <div
            className="field "
          >
            <div
              className="control "
            >
              <input
                className="input is-small"
                data-testid="test-input-healthDepartmentStreet"
                id="healthDepartmentStreet"
                name="healthDepartmentStreet"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <label
            className="label"
            htmlFor="healthDepartmentPostalCode"
          >
            Postleitzahl
          </label>
        </div>
        <div
          className="field-body"
        >
          <div
            className="field "
          >
            <div
              className="control "
            >
              <input
                className="input is-small"
                data-testid="test-input-healthDepartmentPostalCode"
                id="healthDepartmentPostalCode"
                name="healthDepartmentPostalCode"
                onBlur={[Function]}
                onChange={[Function]}
                type="number"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <label
            className="label"
            htmlFor="healthDepartmentCity"
          >
            Stadt
          </label>
        </div>
        <div
          className="field-body"
        >
          <div
            className="field "
          >
            <div
              className="control "
            >
              <input
                className="input is-small"
                data-testid="test-input-healthDepartmentCity"
                id="healthDepartmentCity"
                name="healthDepartmentCity"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <label
            className="label"
            htmlFor="healthDepartmentMail"
          >
            E-Mail
          </label>
        </div>
        <div
          className="field-body"
        >
          <div
            className="field "
          >
            <div
              className="control "
            >
              <input
                className="input is-small"
                data-testid="test-input-healthDepartmentMail"
                id="healthDepartmentMail"
                name="healthDepartmentMail"
                onBlur={[Function]}
                onChange={[Function]}
                type="email"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="field is-horizontal"
      >
        <div
          className="field-label is-normal"
        >
          <label
            className="label"
            htmlFor="healthDepartmentPhone"
          >
            Telefonnummer
          </label>
        </div>
        <div
          className="field-body"
        >
          <div
            className="field "
          >
            <div
              className="control "
            >
              <input
                className="input is-small"
                data-testid="test-input-healthDepartmentPhone"
                id="healthDepartmentPhone"
                name="healthDepartmentPhone"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</form>
`;

exports[`Storyshots SpotEditor/Checkbox default 1`] = `
<div>
  <div
    className="field is-horizontal"
  >
    <div
      className="field-label is-normal"
    >
      <div
        className="label"
      />
    </div>
    <div
      className="field-body"
    >
      <div
        className="field"
      >
        <div
          className="control"
        >
          <label
            className="checkbox"
            htmlFor="name"
          >
            <input
              checked={true}
              id="name"
              name="name"
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
              value="foo"
            />
            <span
              className="form__checkbox--distance"
            >
              The Checkbox
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    className="field is-grouped is-grouped-left"
  >
    <p
      className="control"
    >
      <button
        className="button is-primary"
        disabled={false}
        type="submit"
      >
        Speichern
      </button>
    </p>
    <p
      className="control"
    >
      <button
        className="button is-light"
        data-testid="handle-edit-mode-button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Abbrechen
      </button>
    </p>
  </div>
</div>
`;

exports[`Storyshots SpotEditor/Input text 1`] = `
<div>
  <div
    className="field is-horizontal"
  >
    <div
      className="field-label is-normal"
    >
      <label
        className="label"
        htmlFor="name"
      >
        The Input
      </label>
    </div>
    <div
      className="field-body"
    >
      <div
        className="field "
      >
        <div
          className="control "
        >
          <input
            className="input is-small"
            data-testid="test-input-name"
            id="name"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="foo"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="field is-grouped is-grouped-left"
  >
    <p
      className="control"
    >
      <button
        className="button is-primary"
        disabled={false}
        type="submit"
      >
        Speichern
      </button>
    </p>
    <p
      className="control"
    >
      <button
        className="button is-light"
        data-testid="handle-edit-mode-button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Abbrechen
      </button>
    </p>
  </div>
</div>
`;

exports[`Storyshots SpotEditor/Select default 1`] = `
<div>
  <div
    className="field"
  >
    <label
      className="label"
      htmlFor="name"
    >
      The Checkbox
    </label>
    <div
      className="control"
    >
      <div
        className="select is-small"
      >
        <select
          id="name"
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          value="yes"
        >
          <option
            value="yes"
          >
            YES
          </option>
          <option
            value="no"
          >
            NO
          </option>
        </select>
      </div>
    </div>
  </div>
  <div
    className="field is-grouped is-grouped-left"
  >
    <p
      className="control"
    >
      <button
        className="button is-primary"
        disabled={false}
        type="submit"
      >
        Speichern
      </button>
    </p>
    <p
      className="control"
    >
      <button
        className="button is-light"
        data-testid="handle-edit-mode-button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Abbrechen
      </button>
    </p>
  </div>
</div>
`;
